--- a/app/src/main/res/layout/fragment_admin_calendar.xml
+++ b/app/src/main/res/layout/fragment_admin_calendar.xml
@@ -31,7 +31,7 @@
             app:cv_scrollMode="paged" />
 
 
-        <EditText
+        <TextView
             android:id="@+id/tvEditDayRegistries"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
