--- a/app/src/main/res/layout/fragment_admin_calendar_menu.xml
+++ b/app/src/main/res/layout/fragment_admin_calendar_menu.xml
@@ -40,6 +40,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.48" />
+
+        <Button
+            android:id="@+id/btnDeleteRegistryFragment"
+            android:layout_width="309dp"
+            android:layout_height="74dp"
+            android:drawableLeft="@drawable/ic_delete"
+            android:text="Delete a registry"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.578"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.697" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
